<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerRegistrationActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_design"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/wt_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="639dp"
        android:fontFamily="sans-serif"
        android:linksClickable="false"
        android:text="@string/wt_msg"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#201202"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/txt_app_name"
        android:layout_width="212dp"
        android:layout_height="39dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="608dp"
        android:fontFamily="@font/lobster"
        android:text="@string/txt_app_name"
        android:textColor="#5C3103"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wt_msg" />

    <TextView
        android:id="@+id/txt_sign_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="89dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/txt_sign_msg"
        android:textColor="#753708"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_app_name" />

    <TextView
        android:id="@+id/txt_instruct_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="475dp"
        android:fontFamily="@font/acme"
        android:text="@string/txt_instruct_msg"
        android:textColor="#EA4812"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sign_msg"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="325dp"
        android:layout_marginBottom="463dp"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:fontFamily="@font/aclonica"
        android:text="@string/txt_name"
        android:textColor="#1C0801"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_instruct_msg"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="326dp"
        android:layout_marginBottom="414dp"
        android:drawableLeft="@drawable/ic_baseline_local_post_office_24"
        android:fontFamily="@font/aclonica"
        android:text="@string/txt_address"
        android:textColor="#1C0801"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="320dp"
        android:layout_marginBottom="375dp"
        android:drawableLeft="@drawable/ic_baseline_date_range_24"
        android:fontFamily="@font/aclonica"
        android:text="@string/txt_dob"
        android:textColor="#1C0801"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_address" />

    <TextView
        android:id="@+id/txt_nic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="323dp"

        android:drawableLeft="@drawable/ic_baseline_featured_video_24"
        android:fontFamily="@font/aclonica"
        android:text="@string/txt_nic"
        android:textColor="#1C0801"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dob" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="322dp"
        android:drawableLeft="@drawable/ic_baseline_contact_phone_24"
        android:fontFamily="@font/aclonica"
        android:text="@string/txt_phone"
        android:textColor="#1C0801"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nic" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="323dp"
        android:drawableLeft="@drawable/ic_baseline_attach_email_24"
        android:fontFamily="@font/aclonica"
        android:text="@string/txt_email"
        android:textColor="#1C0801"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/txt_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="325dp"
        android:drawableLeft="@drawable/ic_baseline_account_box_24"
        android:fontFamily="@font/aclonica"
        android:text="@string/txt_user_name"
        android:textColor="#1C0801"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <TextView
        android:id="@+id/txt_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="330dp"
        android:drawableLeft="@drawable/ic_baseline_remove_red_eye_24"
        android:fontFamily="@font/aclonica"
        android:text="@string/txt_pwd"
        android:textColor="#1C0801"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_user_name" />

    <TextView
        android:id="@+id/txt_conf_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="332dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/txt_conf_pwd"
        android:textColor="#1C0801"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pwd" />

    <EditText
        android:id="@+id/PT_full_name"
        android:layout_width="186dp"
        android:layout_height="34dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="449dp"
        android:ems="10"
        android:hint="@string/PT_full_name"

        android:inputType="textPersonName"
        android:text="Full Name"
        android:textColor="#1C4904"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txt_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_instruct_msg"
        app:layout_constraintVertical_bias="0.06" />

    <EditText
        android:id="@+id/PT_address"
        android:layout_width="176dp"
        android:layout_height="58dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="5dp"
        android:ems="10"

        android:hint="@string/PT_address"
        android:inputType="textPostalAddress"
        android:text="Address"
        android:textColor="#1C4904"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@+id/txt_address"
        app:layout_constraintTop_toBottomOf="@+id/PT_full_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/PT_dob"
        android:layout_width="178dp"
        android:layout_height="46dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:ems="10"

        android:inputType="date"
        android:text="DOB"
        android:textColor="#1C4904"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/PT_nic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toEndOf="@+id/txt_dob"
        app:layout_constraintTop_toBottomOf="@+id/PT_address" />

    <EditText
        android:id="@+id/PT_nic"
        android:layout_width="181dp"
        android:layout_height="39dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="282dp"
        android:ems="10"

        android:hint="@string/Pt_nic"
        android:inputType="textPersonName"
        android:text="Name"
        android:textColor="#1C4904"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toEndOf="@+id/txt_nic"
        app:layout_constraintTop_toBottomOf="@+id/PT_dob" />

    <EditText
        android:id="@+id/PT_phone_no"
        android:layout_width="191dp"
        android:layout_height="33dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="220dp"
        android:ems="10"
        android:hint="@string/PT_phone_no"
        android:inputType="phone"
        android:textColor="#1C4904"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/PT_nic"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/PT_email"
        android:layout_width="186dp"
        android:layout_height="36dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:hint="@string/PT_email"
        android:inputType="textEmailAddress"
        android:textColor="#1C4904"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PT_phone_no" />

    <EditText
        android:id="@+id/PT_uname"
        android:layout_width="189dp"
        android:layout_height="34dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:hint="@string/PT_uname"
        android:inputType="textPersonName"
        android:text="user name"
        android:textColor="#1C4904"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/Pwd_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txt_user_name"
        app:layout_constraintTop_toBottomOf="@+id/PT_email" />

    <EditText
        android:id="@+id/Pwd_first"
        android:layout_width="187dp"
        android:layout_height="34dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:hint="@string/pwd_first"
        android:inputType="textPassword"
        android:textColor="#1C4904"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/pwd_conf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txt_pwd"
        app:layout_constraintTop_toBottomOf="@+id/PT_uname" />

    <EditText
        android:id="@+id/pwd_conf"
        android:layout_width="177dp"
        android:layout_height="33dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="114dp"
        android:ems="10"
        android:hint="@string/pwd_conf"
        android:inputType="textPassword"
        android:textColor="#1C4904"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toEndOf="@+id/txt_conf_pwd"
        app:layout_constraintTop_toBottomOf="@+id/Pwd_first" />

    <Button
        android:id="@+id/btn_join"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_marginStart="119dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_reg_design"
        android:hint="@string/btn_join"
        android:text="Join with us"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chk_box2"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/chk_box2"
        android:layout_width="28dp"
        android:layout_height="43dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="69dp"
        android:hint="@string/chk_box"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pwd_conf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_conf_pwd"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/agreement"
        android:layout_width="163dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/anton"
        android:text="@string/txt_agreement"
        android:textColor="#190701"
        app:layout_constraintBottom_toTopOf="@+id/btn_join"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/chk_box2"
        app:layout_constraintTop_toBottomOf="@+id/pwd_conf"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>