<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.RatingsFragment">

    <ImageView
        android:id="@+id/imagetwo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/background_design"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <TextView

        android:id="@+id/welcomehd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/welcomehd"
        android:textColor="#331203"
        android:textSize="50sp"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/imagetwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/allan"
        android:text="@string/quote"
        android:textColor="#DFD7D4"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/imagetwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imagetwo"
        app:layout_constraintVertical_bias="0.296" />

    <TextView
        android:id="@+id/heading1"
        android:layout_width="368dp"
        android:layout_height="135dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/lobster"
        android:text="@string/haeding1"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imagetwo" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/imagetwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imagetwo"
        app:layout_constraintVertical_bias="0.461"
        app:srcCompat="@drawable/applogo" />

    <TextView
        android:id="@+id/Ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="684dp"
        android:fontFamily="@font/amarante"
        android:text="@string/Ratings"
        android:textColor="#E3AE11"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>